# nextclade

./: .all-contributorsrc  .clang-format  .clang-tidy  .codeclimate.yml  .cppcheck  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .nowignore  .readthedocs.yml  .travis.yml  01cds.py  02cds.py  03cds.py  Brewfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  apt-packages.txt  auspice.json  cds_ref.py  cliff.toml  clippy.toml  conanfile.py  conanfile.txt  conanfile.wasm.txt  configure.py  convert.py  dev  dev-docker  dev-local  docker-compose.prod.yml  (+25 more)
packages_rs/nextclade/: Cargo.toml
packages_rs/nextclade-cli/: Cargo.toml
packages_rs/nextclade-cli/examples/: simplealign.rs
packages_rs/nextclade-cli/src/: lib.rs
packages_rs/nextclade-cli/src/cli/: common.rs  mod.rs  nextalign_cli.rs  nextalign_loop.rs  nextalign_ordered_writer.rs  nextclade_cli.rs  nextclade_dataset_get.rs  nextclade_dataset_list.rs  nextclade_loop.rs  nextclade_ordered_writer.rs  nextclade_seq_sort.rs  print_help_markdown.rs  verbosity.rs
packages_rs/nextclade-cli/src/dataset/: dataset.rs  dataset_attributes.rs  dataset_download.rs  dataset_table.rs  mod.rs
packages_rs/nextclade-cli/src/io/: http_client.rs
packages_rs/nextclade-web/: .browserslistrc  .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  json-autotranslate.json  next.config.js  package.json  tsconfig.json
packages_rs/nextclade-web/config/dotenv/: index.js
packages_rs/nextclade-web/config/next/: next.config.ts  withAppJson.ts  withRaw.ts  withSvg.ts  withWasm.ts  withoutMinification.ts
packages_rs/nextclade-web/config/nodemon/: cli.prod.json
packages_rs/nextclade-web/config/webpack/: webpack.cli.babel.ts
packages_rs/nextclade-web/infra/: iam-role-trust-for-lambda-at-edge.json
packages_rs/nextclade-web/infra/lambda-at-edge/: modifyOutgoingHeaders.lambda.js  modifyOutgoingHeadersForApi.lambda.js  redirectPages.ViewerRequest.lambda.js  rewriteToGzipOrBrotli.OriginRequest.lambda.js
packages_rs/nextclade-web/public/: citation.bib  citation.txt  manifest.json
packages_rs/nextclade-web/src/: build.rs  constants.ts  initialize.ts  lib.rs  mdx-components.tsx  run.ts  theme.ts  types.ts
packages_rs/nextclade-web/src/algorithms/: types.ts
packages_rs/nextclade-web/src/filtering/: filterByAminoacidChanges.ts  filterByClades.ts  filterByNucleotideMutations.ts  filterByQCIssues.ts  filterBySeqName.ts  runFilters.ts  splitFilterString.ts
packages_rs/nextclade-web/src/helpers/: ErrorInternal.ts  TFunctionInterface.ts  formatCompatibility.ts  formatFrameShift.ts  formatMutation.ts  formatNonAcgtn.ts  formatPrimer.ts  formatQCCoverage.ts  formatQCFrameShifts.ts  formatQCMissingData.ts  formatQCMixedSites.ts  formatQCPrivateMutations.ts  formatQCSNPClusters.ts  formatQCStopCodons.ts  formatRange.ts  formatSnpCluster.ts  getHttpStatusText.ts  getNucleotideColor.ts  getNumThreads.ts  getSafeId.ts  getTextColor.ts  jestUtils.ts  mergeByWith.ts  number.ts  parseAminoacidChange.ts  parseMutation.ts  parseUrl.ts  readFile.ts  safeZip.ts  sanitizeError.ts  search.ts  sortResults.ts  string.ts  useAxiosQuery.ts  useTranslationSafe.ts
packages_rs/nextclade-web/src/hooks/: useExportResults.ts  useRecoilStateDeferred.ts  useReloadPage.ts  useRunAnalysis.ts  useRunSeqAutodetect.ts  useToggle.ts
packages_rs/nextclade-web/src/i18n/: i18n.auspice.ts  i18n.ts
packages_rs/nextclade-web/src/io/: AlgorithmInput.ts  axiosFetch.ts  createInputFromUrlParamMaybe.ts  fetchDatasetFromGithub.ts  fetchDatasets.ts  fetchDatasetsIndex.ts  fetchInputsAndRunMaybe.ts  fetchSingleDataset.ts  fetchSingleDatasetFromGithub.ts  fetchSingleDatasetFromGithubRepo.ts  fetchSingleDatasetFromUrl.ts  getContributors.ts  messagepack.ts  parseRootSeq.ts  prepareGeneMap.ts  serializeResults.ts  url.ts
packages_rs/nextclade-web/src/pages/: _app.tsx  _document.tsx  _error.tsx  autodetect.tsx  dataset-suggest.tsx  error.tsx  index.tsx  index_.tsx  loading.tsx  results.tsx
packages_rs/nextclade-web/src/pages_/: _app.tsx  index.tsx  tree.tsx
packages_rs/nextclade-web/src/state/: analysisStatusGlobal.state.ts  autodetect.state.ts  dataset.state.ts  error.state.ts  inputs.state.ts  locale.state.ts  navigation.state.ts  reducer.ts  resultFilters.state.ts  results.state.ts  sagas.ts  seqViewSettings.state.ts  settings.state.ts  store.ts
packages_rs/nextclade-web/src/styles/: _variables.scss  global.scss
packages_rs/nextclade-web/src/types/: assets.d.ts  jschardet.d.ts  next.d.ts  svg-module.d.ts
packages_rs/nextclade-web/src/wasm/: analyze.rs  js_value.rs  jserr.rs  main.rs  mod.rs  panic_hook.rs  seq_autodetect.rs
packages_rs/nextclade-web/src/workers/: AnalysisWorkerPool.ts  ExportThread.ts  FastaParserThread.ts  ThreadPoolExtended.ts  go.worker.ts  launchAnalysis.ts  launcher.worker.ts  nextcladeAutodetect.worker.ts  nextcladeWasm.worker.ts  run.ts  spawn.ts  worker.analyze.ts
packages_rs/nextclade-web/src/workers__/: wasmModule.ts  worker.parseGeneMap.ts  worker.parseQcConfig.ts  worker.parseSequencesStreaming.ts  worker.parseVirusJson.ts  worker.serializeToCsv.ts
packages_rs/nextclade-web/tools/: auspice-monkey-patch.sh  fixLocales.ts  generateTypes.js  monkeyPatch.ts  wipe-locales
packages_rs/nextclade-web/tools/server/: dataServer.ts  server.ts
packages_rs/nextclade/benches/: bench_create_stripes.rs  bench_seed_alignment.rs  bench_seed_match.rs
packages_rs/nextclade/examples/: simplealign.rs
packages_rs/nextclade/src/: constants.rs  lib.rs
packages_rs/nextclade/src/align/: align.rs  backtrace.rs  band_2d.rs  gap_open.rs  insertions_strip.rs  mod.rs  params.rs  remove_gaps.rs  score_matrix.rs  (+6 more)
packages_rs/nextclade/test_data/: Hangzhou_ZJU_07_2020.fasta  Hangzhou_ZJU_07_2020_qry_aligned.fasta  Hangzhou_ZJU_07_2020_ref_aligned.fasta  reference.fasta
packages_rs/nextclade/tests/: test_align.rs
packages_rs/seed_matching/: Cargo.toml
packages_rs/seed_matching/data/: mpx_query.fasta  mpx_reference.fasta
packages_rs/seed_matching/src/: main.rs
(+1054 files in other folders)
