[workspace]
resolver = '2'

members = [
  "packages/*",
]

exclude = [
  "packages/3rdparty",
]


[workspace.package]
name = "nextclade"
version = "3.2.0"
description = "Alignment, mutation calling, phylogenetic placement, clade assignment and quality control checks for viral genetic sequences. Library module."
repository = "https://github.com/nextstrain/nextclade"
documentation = "https://docs.nextstrain.org/projects/nextclade/en/stable/"
homepage = "https://clades.nextstrain.org/"
edition = "2021"
license = "MIT"
publish = false
authors = ["Nextstrain team"]


[workspace.dependencies]
assert2 = "=0.3.11"
atty = "=0.2.14"
auto_ops = "=0.3.0"
bio = "=1.3.1"
bio-types = "=1.0.0"
bzip2 = { version = "=0.4.4", features = ["static"] }
chrono = { version = "=0.4.26", default-features = false, features = ["clock", "std", "wasmbind"] }
clap = { version = "=4.4.2", features = ["derive", "color", "unicode", "unstable-styles"] }
clap-markdown = "=0.1.3"
clap_complete = "=4.4.1"
clap_complete_fig = "=4.4.0"
color-eyre = "=0.6.2"
comfy-table = "=7.0.1"
console_error_panic_hook = "=0.1.7"
criterion = { version = "=0.5.1", features = ["html_reports"] }
crossbeam = "=0.8.2"
crossbeam-channel = "=0.5.8"
csv = "=1.2.2"
ctor = "=0.2.2"
derive_more = "=0.99.17"
dotenv = "=0.15.0"
dotenv_codegen = "=0.15.0"
edit-distance = "=2.1.0"
either = "=1.8.1"
env_logger = "=0.10.0"
eyre = "=0.6.8"
flate2 = "=1.0.26"
gcollections = "=1.5.0"
getrandom = { version = "=0.2.10", features = ["js"] }
indexmap = { version = "=1.9.3", features = ["serde"] }
intervallum = "=1.4.0"
itertools = "=0.11.0"
js-sys = { version = "=0.3.64", features = [] }
lazy_static = "=1.4.0"
log = "=0.4.19"
maplit = "=1.0.2"
multimap = "=0.8.3"
num = "=0.4.0"
num-traits = "=0.2.15"
num_cpus = "=1.16.0"
optfield = "=0.3.0"
ordered-float = { version = "=3.9.1", features = ["rand", "serde", "schemars"] }
owo-colors = "=3.5.0"
pretty_assertions = "=1.3.0"
rayon = "=1.7.0"
regex = "=1.8.4"
reqwest = { version = "=0.11.18", default-features = false, features = ["blocking", "deflate", "gzip", "brotli", "socks", "rustls-tls"] }
rstest = "=0.17.0"
rstest_reuse = "=0.5.0"
schemars = { version = "=0.8.12", features = ["chrono", "either", "enumset", "indexmap"] }
semver = { version = "=1.0.17", features = ["serde"] }
serde = { version = "=1.0.164", features = ["derive"] }
serde-wasm-bindgen = { version = "=0.5.0" }
serde_json = { version = "=1.0.99", features = ["preserve_order", "indexmap", "unbounded_depth"] }
serde_repr = "=0.1.12"
serde_stacker = { version = "=0.1.8" }
serde_yaml = "=0.9.22"
strsim = "=0.10.0"
strum = "=0.25.0"
strum_macros = "=0.25.0"
tinytemplate = "=1.2.1"
traversal = "=0.1.2"
url = { version = "=2.4.0", features = ["serde"] }
urlencoding = "=2.1.2"
validator = { version = "=0.16.1", features = ["derive"] }
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
wasm-logger = "=0.2.0"
web-sys = { version = "=0.3.64", features = ["console"] }
xz2 = { version = "=0.1.7", features = ["static"] }
zip = { version = "=0.6.6", default-features = false, features = ["aes-crypto", "deflate", "time"] }
zstd = { version = "=0.12.3", features = ["zstdmt"] }
