[package]
name = "nextclade-web"
version = "2.10.1"
description = "Alignment, mutation calling, phylogenetic placement, clade assignment and quality control checks for viral genetic sequences. WebAssembly module."
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assert2 = "0.3.6"
console_error_panic_hook = "0.1.7"
eyre = "0.6.8"
getrandom = { version = "0.2.6", features = ["js"] }
itertools = "0.10.3"
js-sys = { version = "0.3.57", features = [] }
log = "0.4.16"
nextclade = { path = "../nextclade" }
serde = { version = "1.0.136", features = ["derive"] }
typescript-definitions = { path = "../3rdparty/typescript-definitions", features = ['export-typescript'] }
typescript-definitions-derive = { path = "../3rdparty/typescript-definitions/typescript-definitions-derive", features = ['export-typescript'] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.56", features = ["console"] }

[dev-dependencies]
assert2 = "0.3.6"
wasm-bindgen-test = "0.3.29"
