[package]
name = "nextclade-web"
version = "3.0.1"
description = "Alignment, mutation calling, phylogenetic placement, clade assignment and quality control checks for viral genetic sequences. WebAssembly module."
edition = "2021"
license = "MIT"
publish = false
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assert2 = "=0.3.11"
chrono = { version = "=0.4.26", default-features = false, features = ["clock", "std", "wasmbind"] }
console_error_panic_hook = "=0.1.7"
eyre = "=0.6.8"
getrandom = { version = "=0.2.10", features = ["js"] }
itertools = "=0.11.0"
js-sys = { version = "=0.3.64", features = [] }
log = "=0.4.19"
nextclade = { path = "../nextclade" }
schemars = { version = "=0.8.12", features = ["chrono", "either", "enumset", "indexmap1"] }
serde = { version = "=1.0.164", features = ["derive"] }
serde-wasm-bindgen = { version = "=0.5.0" }
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
wasm-logger = "=0.2.0"
web-sys = { version = "=0.3.64", features = ["console"] }

[build-dependencies]
nextclade = { path = "../nextclade" }
schemars = { version = "=0.8.12", features = ["chrono", "either", "enumset", "indexmap1"] }
eyre = "=0.6.8"

[dev-dependencies]
assert2 = "=0.3.11"
wasm-bindgen-test = "=0.3.37"
