[package]
name = "nextclade"
description = "Alignment, mutation calling, phylogenetic placement, clade assignment and quality control checks for viral genetic sequences"
version = "2.0.1"
repository = "https://github.com/nextstrain/nextclade"
documentation = "https://docs.nextstrain.org/projects/nextclade/en/stable/"
homepage = "https://clades.nextstrain.org/"
edition = "2021"
license = "MIT"
publish = false


[lib]
crate-type = ["lib"]

[dependencies]
assert2 = "0.3.6"
auto_ops = "0.3.0"
bio = "0.41.0"
bio-types = "0.12.1"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
clap = { version = "3.1.8", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
clap_complete = "3.1.1"
clap_complete_fig = "3.1.4"
color-eyre = "0.6.1"
comfy-table = "6.0.0-rc.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
csv = "1.1.6"
ctor = "0.1.22"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.9.0"
eyre = "0.6.8"
getrandom = "0.2.6"
indexmap = { version = "1.8.1", features = ["serde"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.16"
num = "0.4.0"
num-traits = "0.2.14"
num_cpus = "1.13.1"
owo-colors = "3.3.0"
pretty_assertions = "1.2.1"
rayon = "1.5.2"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "deflate", "gzip", "brotli", "socks"] }
rstest = { version = "0.12.0", optional = true }
rstest_reuse = { version = "0.3.0", optional = true }
semver = "1.0.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order", "indexmap", "unbounded_depth"] }
traversal = "0.1.2"
typescript-definitions = { path = "../../3rdparty/typescript-definitions", features = ['export-typescript'], optional = true }
typescript-definitions-derive = { path = "../../3rdparty/typescript-definitions/typescript-definitions-derive", features = ['export-typescript'], optional = true }
url = { version = "2.2.2", features = ["serde"] }
validator = { version = "0.14.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"], optional = true }

[target.'cfg(all(target_family = "linux", target_arch = "x86_64"))'.dependencies]
mimalloc = { version = "0.1.28", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rstest = "0.12.0"
rstest_reuse = "0.3.0"
typescript-definitions = { path = "../../3rdparty/typescript-definitions", features = ['export-typescript'] }
typescript-definitions-derive = { path = "../../3rdparty/typescript-definitions/typescript-definitions-derive", features = ['export-typescript'] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }

[features]
default = ["non-wasm"]
wasm = [
  "getrandom/js",
  "typescript-definitions",
  "typescript-definitions-derive",
  "wasm-bindgen",
]
non-wasm = [
  "rstest",
  "rstest_reuse"
]


[[bench]]
name = "bench_create_stripes"
harness = false

[[bench]]
name = "bench_seed_match"
harness = false

[[bench]]
name = "bench_seed_alignment"
harness = false
