[package]
name = "nextclade"
version = "2.14.0"
description = "Alignment, mutation calling, phylogenetic placement, clade assignment and quality control checks for viral genetic sequences. Library module."
repository = "https://github.com/nextstrain/nextclade"
documentation = "https://docs.nextstrain.org/projects/nextclade/en/stable/"
homepage = "https://clades.nextstrain.org/"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
assert2 = "=0.3.11"
auto_ops = "=0.3.0"
bio = "=1.3.1"
bio-types = "=1.0.0"
chrono = { version = "=0.4.26", default-features = false, features = ["clock", "std", "wasmbind"] }
clap = { version = "=4.3.10", features = ["derive"] }
clap-verbosity-flag = "=2.0.1"
clap_complete = "=4.3.1"
clap_complete_fig = "=4.3.1"
color-eyre = "=0.6.2"
csv = "=1.2.2"
ctor = "=0.2.2"
derive_more = "=0.99.17"
edit-distance = "=2.1.0"
either = "=1.8.1"
env_logger = "=0.10.0"
eyre = "=0.6.8"
flate2 = "=1.0.26"
gcollections = "=1.5.0"
getrandom = "=0.2.10"
indexmap = { version = "=1.9.3", features = ["serde"] }
intervallum = "=1.4.0"
itertools = "=0.11.0"
lazy_static = "=1.4.0"
log = "=0.4.19"
maplit = "=1.0.2"
multimap = "=0.8.3"
num = "=0.4.0"
num-traits = "=0.2.15"
num_cpus = "=1.16.0"
optfield = "=0.3.0"
owo-colors = "=3.5.0"
pretty_assertions = "=1.3.0"
rayon = "=1.7.0"
regex = "=1.8.4"
schemars = { version = "=0.8.12", features = ["chrono", "either", "enumset", "indexmap"] }
semver = "=1.0.17"
serde = { version = "=1.0.164", features = ["derive"] }
serde_json = { version = "=1.0.99", features = ["preserve_order", "indexmap", "unbounded_depth"] }
serde_repr = "=0.1.12"
serde_stacker = { version = "=0.1.8" }
serde_yaml = "=0.9.22"
strum = "=0.25.0"
strum_macros = "=0.25.0"
tinytemplate = "=1.2.1"
traversal = "=0.1.2"
urlencoding = "=2.1.2"
validator = { version = "=0.16.1", features = ["derive"] }
zip = { version = "=0.6.6", default-features = false, features = ["aes-crypto", "deflate", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atty = "=0.2.14"
bzip2 = "=0.4.4"
xz2 = "=0.1.7"
zstd = { version = "=0.12.3", features = ["zstdmt"] }

[dev-dependencies]
assert2 = "=0.3.11"
criterion = { version = "=0.5.1", features = ["html_reports"] }
rstest = "=0.17.0"
rstest_reuse = "=0.5.0"


[[bench]]
name = "bench_create_stripes"
harness = false

[[bench]]
name = "bench_seed_match"
harness = false

[[bench]]
name = "bench_seed_alignment"
harness = false
