[package]
name = "seed-matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
gcollections = "1.5.0"
intervallum = "1.4.0"

[profile.release]
debug = true
strip = "none"
incremental = true
split-debuginfo = "packed"
